emb/src/main/java/com/example/emb/global/error/GlobalExceptionHandler.java
package com.example.emb.global.error;public class GlobalExceptionHandler {
}
